--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
+    "@codux-boards/react-semantic": "^1.0.0",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
