--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
